--- a/rapt/templates/app-build.gradle
+++ b/rapt/templates/app-build.gradle
@@ -24,7 +24,7 @@ android {
             enable true;
             reset();
 
-            include "x86_64", "armeabi-v7a", "arm64-v8a"
+            include "armeabi-v7a"
             universalApk true
         }
     }
@@ -56,7 +56,7 @@ android {
     }
 
 
-    project.ext.versionCodes = ['armeabi-v7a': 0, 'arm64-v8a': 1, 'x86_64': 8]
+    project.ext.versionCodes = ['armeabi-v7a': 0]
 
     android.applicationVariants.all { variant ->
         // assign different version code for each output
